# arl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile.ARLdefaults  README.md
arl/: arl.hpp  config.hpp  config.hpp.in  config_env.hpp  global_decl.hpp
arl/am/: agg_buffer.hpp  am.hpp  am_agg(with_fine-grained_lock).hpp  am_agg.hpp  am_aggrd.hpp  am_ff.hpp  am_ffrd.hpp  am_progress.hpp  am_queue.hpp  future.hpp  rpc_t.hpp
arl/am/agg_buffer/: agg_buffer.hpp  agg_buffer_archive.hpp  agg_buffer_atomic.hpp  agg_buffer_local.hpp  agg_buffer_simple.hpp
arl/am/archive/: agg_buffer.hpp  am.hpp  am_agg.hpp  rpc_t.hpp
arl/backend/: backend.hpp  collective.hpp  reduce.hpp
arl/backend/GASNet-EX/: base.hpp  collective.hpp  reduce.hpp
arl/backend/LCI/: base.hpp  collective.hpp  reduce.hpp
arl/base/: base.hpp  collective.hpp  malloc.hpp  op.hpp  rank.hpp  worker_object.hpp
arl/base/detail/: threadbarrier.hpp
arl/data_structure/: bloom_filter.hpp  dist_object.hpp  dist_wrapper.hpp  hash_map.hpp
arl/data_structure/detail/: hash_funcs.h
arl/tool/: assert.hpp  colors.hpp  debug.hpp  info.hpp  timer.hpp  utils.hpp
cmake_modules/: ARLUtils.cmake
contrib/spack/: repo.yaml
examples/: CMakeLists.txt  Makefile  arl_hello_world.cpp  benchmark_empty.cpp  benchmark_template.cpp  counter.cpp  gobble_sort.cpp  gobble_sort_proc.cpp  profile_agg.cpp  profile_ffrd.cpp
examples/kcount/: .gitignore  CMakeLists.txt
examples/kcount/common/: hash_funcs.c  hash_funcs.h  kcount_config.hpp  kmer.hpp  rapidhash.h
examples/kcount/include/: bloom.hpp  colors.h  fastq.hpp  kmer_dht.hpp  options.hpp  progressbar.hpp  utils.hpp
examples/kcount/include_upcxx/: aggr_store.hpp  hash_funcs.h  kmer_dht.hpp  timer.hpp  utils.hpp
examples/kcount/src/: Makefile  config.hpp  get_standard_result.sh  kcount.cpp  kcount_agg.cpp  kcount_aggrd.cpp  kcount_direct.cpp  kcount_ff.cpp  kcount_ffrd.cpp  kcount_ffrd_profile.cpp  kcount_upcxx.cpp  kmer_dht_arl.hpp  kmer_hash.cpp
examples/kcount/src/sample/: gut-5x-h4000.answer  gut-5x-h4000.fastq
examples/kmer_hash/: CMakeLists.txt  Makefile  kmer_hash_agg.cpp  kmer_hash_agg_profile.cpp  kmer_hash_naive.cpp  kmer_hash_rd.cpp  kmer_hash_rd_profile.cpp  read_kmers.hpp  test_correct.sh
examples/kmer_hash/sample/: generate_dataset_jk.py  kmers-100-1.answer
examples/microbenchmark/: CMakeLists.txt  Makefile  aggr_store.hpp  aggr_store_bw.cpp  arl_agg_bw.cpp  arl_aggrd_bw.cpp  arl_barrier_oh.cpp  arl_buf_oh.cpp  arl_bw.cpp  arl_ff_bw.cpp  arl_ffrd_bw.cpp  arl_gex_bw.cpp  gex_bw_prc.cpp  gex_bw_trd_ff.cpp  gex_timer.hpp  network_bw.cpp  upcxx_bw.cpp
examples/microbenchmark/attentiveness/: CMakeLists.txt  Makefile  arl_at.cpp  upcxx_at.cpp
examples/microbenchmark/bw_strong/: CMakeLists.txt  Makefile  arl_agg_bw.cpp  arl_agg_bw_strong.cpp  arl_aggrd_bw.cpp  arl_aggrd_bw_strong.cpp  arl_ff_bw.cpp  arl_ff_bw_strong.cpp  arl_ffrd_bw.cpp  arl_ffrd_bw_strong.cpp  gex_bw.cpp  gex_bw_strong.cpp  gex_bw_trd.cpp  upcxx_agg_bw.cpp  upcxx_agg_bw_strong.cpp
examples/microbenchmark/bw_weak/: CMakeLists.txt  Makefile  arl_agg_bw.cpp  arl_agg_bw_weak.cpp  arl_aggrd_bw_weak.cpp  arl_ff_bw.cpp  arl_ff_bw_weak.cpp  arl_ffrd_bw.cpp  arl_ffrd_bw_weak.cpp  gex_bw_trd.cpp  gex_bw_weak.cpp  upcxx_agg_bw.cpp  upcxx_agg_bw_weak.cpp
examples/microbenchmark/gasnet_threaded/: Makefile  gasnet-large-medium.cpp  gasnet-threaded.cpp
examples/microbenchmark/heavy_handler/: CMakeLists.txt  Makefile  arl_agg.cpp  arl_aggrd.cpp  arl_ff.cpp  arl_ffrd.cpp  arl_hh_ffrd.cpp  gex_hh.cpp  upcxx_agg.cpp
examples/microbenchmark/latency/: CMakeLists.txt  Makefile  arl_lt.cpp  gex_lt.cpp  upcxx_lt.cpp
examples/microbenchmark/load_imbalance/: Makefile  arl_imba.cpp  upcxx_imba.cpp
examples/multithreadGasnet/: Makefile  arh_bandwidth.cpp  arl_bandwidth.cpp  rawgasnet_proc_bandwidth.cpp  rawgasnet_thread_bandwidth.cpp
examples/spmv/: Makefile  benchmark_spmv.cpp  benchmark_spmv_local.cpp  benchmark_spmv_naive.cpp  benchmark_spmv_proc.cpp  check.sh
examples/spmv/csrmat/: 1138_bus.pm  CSRMatrix.hpp  chesapeake.mtx  matrix_io.hpp
experiments/: .gitignore
experiments/cori/microbenchmark/: attentiveness.slurm  bw_strong.slurm  bw_weak.slurm  draw.sh  draw_at.py  draw_bw_strong.py  draw_bw_weak.py  draw_hh.py  draw_kcount.py  draw_latency.py  heavy_handler.slurm  init.sh  kcount.slurm  latency.slurm  parse_at.py  parse_bw_strong.py  parse_bw_weak.py  parse_hh.py  parse_kcount.py  parse_latency.py  run.sh  summary.sh
experiments/include/: parser_graph.py  pexp.py  plotexp.py
include/: CMakeLists.txt  arl.hpp  config_env.hpp  global_decl.hpp
include/am/: am.hpp  am_agg.hpp  am_aggrd.hpp  am_ff.hpp  am_ffrd.hpp  am_inline.hpp  am_progress.hpp  am_registry.hpp  future.hpp
include/am/agg_buffer/: agg_buffer.hpp  agg_buffer_archive.hpp  agg_buffer_atomic.hpp  agg_buffer_local.hpp  agg_buffer_simple.hpp
include/backend/: backend.hpp  reduce.hpp
include/base/: base.hpp  collective.hpp  fn_register.hpp  rank.hpp  worker_object.hpp
include/base/detail/: threadbarrier.hpp
include/data_structure/: bloom_filter.hpp  dist_object.hpp  dist_wrapper.hpp  hash_map.hpp
include/tool/: colors.hpp  debug.hpp  info.hpp  timer.hpp  utils.hpp
src/: CMakeLists.txt  arl.cpp  arl_internal.hpp  config_env.cpp
src/am/: am.cpp  am_agg.cpp  am_aggrd.cpp  am_ff.cpp  am_ffrd.cpp
src/backend/: backend.cpp
src/backend/GASNet-EX/: base.hpp  collective.hpp  reduce.hpp
src/backend/LCI/: backend_lci.cpp  base.hpp  collective.hpp  reduce.hpp
src/backend/gex/: base.cpp  base.hpp
src/backend/lci/: base.cpp  base.hpp
src/tool/: debug.cpp
tests/: CMakeLists.txt  Makefile  am_ff_test.cpp  arl_profile.cpp  run_tests.sh  test_agg_buffer.cpp  test_agg_buffer2.cpp  test_agg_rpc.cpp  test_am_ff.cpp  test_am_registry.cpp  test_amagg.cpp  test_amaggrd.cpp  test_amff.cpp  test_amffrd.cpp  test_bloom_filter.cpp  test_broadcast.cpp  test_dist_wrapper.cpp  test_hash_map.cpp  test_reduce.cpp  test_rpc_agg.cpp  test_rpc_nonvoid.cpp  test_rpc_void.cpp  test_worker_object.cpp
(+1 files in other folders)
