add_arl_executable(arl_barrier_oh arl_barrier_oh.cpp)
add_arl_executable(arl_buf_oh arl_buf_oh.cpp)
add_arl_executable(arl_bw arl_bw.cpp)
add_arl_executable(network_bw network_bw.cpp)

include_directories(.)
add_subdirectory(bw_strong)
add_subdirectory(bw_weak)
add_subdirectory(latency)
add_subdirectory(attentiveness)
add_subdirectory(heavy_handler)